--- a/page2.html
+++ b/page2.html
@@ -9,6 +9,7 @@
 <body>
     <body class="paper-bg">
     <main class="content">
+        <marquee>
      <section="stack">
         <img src="img1.png" alt="Coin 1" class="coin"/>
         <img src="img2.png" alt="Coin2" class="coin"/>
@@ -16,7 +17,10 @@
         <img src="img4.png" alt="coin4" class="coin"/>
         <img src="img5.png" alt="coin5" class="coin"/>
         <img src="img6.png" alt="coin6" class="coin"/>
+        <img src="img7.png" alt="coin7" class="coin"/>
+        <img src="img8.png" alt="coin8" class="coin"/>
     </section>
+    </marquee>
     </main>
     </body>
 </body>
