only editing needed

--- a/img10.html
+++ b/img10.html
@@ -22,5 +22,27 @@
   })();
 </script>
 
+
+And last byt not the least, we talk about our 10th coinnnn. which is:
+<H1> PUNCH MARKED KARSHAPANA (Ancient india, 6th-2nd BCE)</H1>
+-early indian silver coins stamped with multuple symbols rather portriats.
+-issued by mahajanapadas and later empries with regional symnbol sets.
+-standarsdezed wieghts enabled trade acorss the subcontinent.
+-designs include sunds, animals, geomatric marks stamped by authorities.
+-a foundational state in south asian monetary evolution.
+
+
+
+So, this is OUR LAST COIN we are talking about.
+The coin is <b> <h2> PUNCH MARKED KARSHAPANA (ancient india, 6th-2nd BCE)</h2></b>
+The major features of this coin includess:
+1. Early Indian silver coins stamped with muliples symbls rather portraits of the emperors. <br>
+2. Issued by mahajanapadas and later emperorrs with regional symbol sets.
+3. Standarized weights enabled trade across the subcontinent.
+4. Designs include sunds, animals, geometric marks stamped by authorities.
+5. A foundation state in south asian monerary evolution.
+
+
+so this is 
 </body>
 </html>
