--- a/img2.html
+++ b/img2.html
@@ -22,6 +22,20 @@
   }) ();
 
 </script>
-</body>
+
+The second coin we are talking about is: 
+(dumrollss!!)
+
+<H1> ROMAN DENARIUS (Rome, 3rd BC- 3RD CE) </H1>
+- The backbone silver coin of the roman republic and early empire.
+-the most early versions of the coin show the images of deities but 
+on the later version, it features emperors and propaganda scenes.
+-Widespread circulation and use enabled soldier pay, taxation, and imperial logistics.
+-Over time, silver content was debased, relecting economic strains on empires.
+- its legacy however continue to survive in later monetray terms and symbols.
+
+the backbone silver coin of the roman republic and early empire
+the most early versin of the coin show the images of deites by on the later versin, it featues empreios and progamange scenees
+weidespread ciruclateion and use enale 
 </html>
 
