--- a/img4.html
+++ b/img4.html
@@ -22,5 +22,19 @@
   })();
 </script>
 
+noww we are talking about the fourth coin which is:
+
+<H1>PERSIAN DARIC (archaemenid empire, 6th-4th bce)</H1>
+-it was a standard gold coin feauturing the royal archer motif.
+-it was paired with the silver siglos in a bi-metallix system for imperial finance.
+-it facitilited payments across a vast multicultural empire.
+-noted for consistent weight and high purity, which ensured trust.
+-it influenced high neightboring economics and later coina4es.
+
+
+Now lets talk about our 4th coin:
+<B> Per</B>
+
+</h1>
 </body>
 </html>
