--- a/img5.html
+++ b/img5.html
@@ -22,5 +22,14 @@
   })();
 </script>
 
+
+now lets talk about our fifth coin which is:
+
+<H1>LYDIAN ELECTRUM STATER</H1>
+-it was one the world's first coins, struck in native electrum(alloy of gold-silver).
+-it typically showed a lion or lion-bull design associated with royal authority.
+-it pioneered denominations like trite and hekte for practicality.
+-however variablility in elctrum composition complicated percise valuation
+-it set the pattern for stamped, state-guarenteed money.
 </body>
 </html>
