--- a/img6.html
+++ b/img6.html
@@ -22,5 +22,15 @@
   })();
 </script>
 
+lets talk about our sixthh coin nowww.
+
+<h1> GOLDE STATER OF CROESUS</h1>
+-First widely used and recognized pure gold standard coin, paired with pure silver issues.
+-lion and the bull confronting design symbolizes power and prosperity.
+-solved electrum valuation problem with fized metal fineness.
+-influenced greek and near easter monetary systems.
+-a milestone that stablized larger scale commerce.
+
+<h1> </h1>
 </body>
 </html>
