--- a/img7.html
+++ b/img7.html
@@ -23,5 +23,18 @@
   })();
 </script>
 
+
+now here comess the 7th coinn, we are talking about:
+
+<h1> SYRACUSE DECADRACHM (SICILY, 5TH-TH BCE)
+-massive silver piece famef for astitics excellence by masters like kimon and euainetos.
+-obverse often showes arethusa with dolphis, reverse a quadriga with nika.
+-likely commemorative or prize realted
+-not used for daily transcations.
+-exemplifies peak classical die engraving and civic pride.
+-rarity and artistry make it a tropy coin for museums and collectos now.
+
+mduhfrgrfvvvvvvv
+</h1>
 </body>
 </html>
