--- a/img8.html
+++ b/img8.html
@@ -9,7 +9,7 @@
 
     <script>
   (function () {
-    const COIN_ID = "coin8"; // change to coin2 on img2.html, etc.
+    const COIN_ID = "coin8v"; // change to coin2 on img2.html, etc.
     const KEY_READ = "numescape_read";
     const KEY_COINS = "numescape_coins";
 
@@ -22,6 +22,14 @@
     }
   })();
 </script>
+
+now we talked about my 8th coinss, im so exicted, lets goo!!!!!
+<h1> 8, AKRAGAS DECADRACHM (also in silcly, early 5th, c. BCE)</h1>
+-exceptionally rare large silver coin with elaborate eagle and chariot imagery.
+-may celebrate athletic victories or civic acheievements.
+-symbolism weaves ky sea and divine favor into civic identity.
+-technically challeneging to strike due to size and relief.
+-a huge pinnacle for sicillian numismatic artisty and prestige.
 
 </body>
 </html>
