--- a/img9.html
+++ b/img9.html
@@ -21,6 +21,13 @@
     }
   })();
 </script>
+now wealk about our 9th coin at lasy which is:
+<b><h1> BRUTUS 'EID MAR' denarius (rome, 42 bce)</h1></b>
+-commenorates the assassination of juilus caesar with daggers and the liberty cap.
+-obverse bears brutus' prottait, a bol political statement.
+-struck by the conspirators during civil war campaignss.
+-many were later melted, surviving exas,ples are exceedingly rare.
+-a dramatix fusion on hisriy, progagpaneg and coinage.
 
 </body>
 </html>
