--- a/img1.html
+++ b/img1.html
@@ -22,6 +22,18 @@
 
   }) ();
 </script>
+Okay the first coin we are talking about is:
+*DRUMROLLS OFC!*
+
+<B>1. athenian tetradrachm (Athens, 4th-5th BCE)</b>
+- Iconic "owl" silver coin bearing Athena's head on the obverse and her owl with olive sprig on the reverse.
+-Minter from Laurion silver mines, it fueled Athenian trade and the city's Golden age.
+-Its crisp style and bold eyes make it a numismatic masterpieve.
+-It was known for its high weight standard and consistent silver cotent.
+-Served as a trusted International currency in ancient world.
+
+
+
 
 </body>
 </html>
