--- a/page2.html
+++ b/page2.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <body class="paper-bg">
+
+      <img src="numi
     <main class="content">
      <section="stack">
 
@@ -139,6 +141,34 @@
 
 
 <b> Helllo everyonee, welcome to Numiscapee!! </b>
+You own little pocket place of ancient coin history.
+
+Okay, im so excited for thiss
+
+Let me instrouce you all to "NUMISCAPEEEE", Your own little picket of coin historyy.
+The website (made with love in a little hurryyy) is a small space for histroy about coins
+
+
+FAQQQ: (because my webite sucksss!!)
+
+1. I just landed here, what iss thiss all aboutt?
+this website is called "numiscape", this is all abouttt coins and their ancient historyy, you can call it your own little pocket of
+ancient historyy!!
+
+2. okayy cool, i just earned some coinsss??
+yess thatss the funn partt, the coinnss!
+you earn coins each time you visit to read about one of the coinss, and you gainn coinss
+
+3. What do wee usee the coins for thoughh??
+you can use the coinss in the coin well-dialog
+
+4. WAIT- COIN WELL? TELL ME ABOUT ITT!!
+The coin well is place where you can spend your earned coins to learn some randomm historyy factss yayyy.
+
+5. I just checked all the pages and i wanna learnn moree!!!
+Ofcc bestiee, i would be adding more coins to itt by mondayy (if youre seeing it before monday edt, forgive me)
+
+
 </body>
 </html>
 
