only images to be added

--- a/img2.html
+++ b/img2.html
@@ -9,33 +9,34 @@
 <script>
   (function () {
     const COIN_ID = "coin2";
-    const KEY_READ = "numescape_read";
-    const KEY_COINS = "numescape_coins";
+    const KEY_READ= "numescape_read";
+    const KEY_COINS= "numescape_coins";
 
     const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
     if (!read[COIN_ID]) {
       read[COIN_ID] = true;
       localStorage.setItem(KEY_READ, JSON.stringify(read));
       const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
-      localStorage.setItem(KET_COINS, String(coins));
-    }
+      localStorage.setItem(KEY_COINS, String(coins));
+    } 
+
   }) ();
 
 </script>
 
 The second coin we are talking about is: 
-(dumrollss!!)
+(dumrollss!!) <br> 
 
-<H1> ROMAN DENARIUS (Rome, 3rd BC- 3RD CE) </H1>
-- The backbone silver coin of the roman republic and early empire.
+<H1> ROMAN DENARIUS (Rome, 3rd BC- 3RD CE) </H1> <br> 
+- The backbone silver coin of the roman republic and early empire. <br> 
 -the most early versions of the coin show the images of deities but 
-on the later version, it features emperors and propaganda scenes.
--Widespread circulation and use enabled soldier pay, taxation, and imperial logistics.
--Over time, silver content was debased, relecting economic strains on empires.
-- its legacy however continue to survive in later monetray terms and symbols.
+on the later version, it features emperors and propaganda scenes. <br> 
+-Widespread circulation and use enabled soldier pay, taxation, and imperial logistics. <br> 
+-Over time, silver content was debased, relecting economic strains on empires. <br>
+- its legacy however continue to survive in later monetray terms and symbols. <br>
 
-the backbone silver coin of the roman republic and early empire
-the most early versin of the coin show the images of deites by on the later versin, it featues empreios and progamange scenees
-weidespread ciruclateion and use enale 
+
+
+</body>
 </html>
 
