--- a/img1.html
+++ b/img1.html
@@ -23,14 +23,16 @@
   }) ();
 </script>
 Okay the first coin we are talking about is:
-*DRUMROLLS OFC!*
+*DRUMROLLS OFC!* <br> <br> 
 
-<B>1. athenian tetradrachm (Athens, 4th-5th BCE)</b>
-- Iconic "owl" silver coin bearing Athena's head on the obverse and her owl with olive sprig on the reverse.
--Minter from Laurion silver mines, it fueled Athenian trade and the city's Golden age.
--Its crisp style and bold eyes make it a numismatic masterpieve.
--It was known for its high weight standard and consistent silver cotent.
--Served as a trusted International currency in ancient world.
+<B><h1> 1. athenian tetradrachm (Athens, 4th-5th BCE)</h1></b> <br> 
+- Iconic "owl" silver coin bearing Athena's head on the obverse and her owl with olive sprig on the reverse. <br>
+-Minter from Laurion silver mines, it fueled Athenian trade and the city's Golden age. <br> 
+-Its crisp style and bold eyes make it a numismatic masterpieve. <br> 
+-It was known for its high weight standard and consistent silver cotent. <br>
+-Served as a trusted International currency in ancient world.<br>
+
+
 
 
 
