--- a/img10.html
+++ b/img10.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <script>
-  (function () {
-    const COIN_ID = "coin10"; // change to coin2 on img2.html, etc.
-    const KEY_READ = "numescape_read";
-    const KEY_COINS = "numescape_coins";
+   (function () {
+    const COIN_ID = "coin10";
+    const KEY_READ= "numescape_read";
+    const KEY_COINS= "numescape_coins";
 
     const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
     if (!read[COIN_ID]) {
@@ -18,31 +18,20 @@
       localStorage.setItem(KEY_READ, JSON.stringify(read));
       const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
       localStorage.setItem(KEY_COINS, String(coins));
-    }
-  })();
+    } 
+
+  }) ();
 </script>
 
 
-And last byt not the least, we talk about our 10th coinnnn. which is:
-<H1> PUNCH MARKED KARSHAPANA (Ancient india, 6th-2nd BCE)</H1>
--early indian silver coins stamped with multuple symbols rather portriats.
--issued by mahajanapadas and later empries with regional symnbol sets.
--standarsdezed wieghts enabled trade acorss the subcontinent.
--designs include sunds, animals, geomatric marks stamped by authorities.
--a foundational state in south asian monetary evolution.
+And last byt not the least, we talk about our 10th coinnnn. which is: <br> 
+<H1> PUNCH MARKED KARSHAPANA (Ancient india, 6th-2nd BCE)</H1> <br> 
+-early indian silver coins stamped with multuple symbols rather portriats. <br> 
+-issued by mahajanapadas and later empries with regional symnbol sets. <br> 
+-standarsdezed wieghts enabled trade acorss the subcontinent. <br> 
+-designs include sun, animals, geomatric marks stamped by authorities. <br>
+-a foundational state in south asian monetary evolution. <br> 
 
 
-
-So, this is OUR LAST COIN we are talking about.
-The coin is <b> <h2> PUNCH MARKED KARSHAPANA (ancient india, 6th-2nd BCE)</h2></b>
-The major features of this coin includess:
-1. Early Indian silver coins stamped with muliples symbls rather portraits of the emperors. <br>
-2. Issued by mahajanapadas and later emperorrs with regional symbol sets.
-3. Standarized weights enabled trade across the subcontinent.
-4. Designs include sunds, animals, geometric marks stamped by authorities.
-5. A foundation state in south asian monerary evolution.
-
-
-so this is 
 </body>
 </html>
