--- a/img3.html
+++ b/img3.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <script>
-  (function () {
-    const COIN_ID = "coin3"; // change to coin2 on img2.html, etc.
-    const KEY_READ = "numescape_read";
-    const KEY_COINS = "numescape_coins";
+   (function () {
+    const COIN_ID = "coin3";
+    const KEY_READ= "numescape_read";
+    const KEY_COINS= "numescape_coins";
 
     const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
     if (!read[COIN_ID]) {
@@ -18,37 +18,23 @@
       localStorage.setItem(KEY_READ, JSON.stringify(read));
       const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
       localStorage.setItem(KEY_COINS, String(coins));
-    }
-  })();
+    } 
+
+  }) ();
 </script>
 
-the next coin we are talking about it:
+the next coin we are talking about it: <br> 
 
-<h1> ROMAN AREUS (Rome, late republic)</h1>
-- it was a high purity gold coin used for large paryments and elite transcations.
--often portrays empepors with titles for their legitimacy and victories.
--minted in small quantites than silver bronzes, making it prized today.
--replacement by the solidus under constanine signaled a monetary shift.
--it was one of a king and a benchmark of imperia wealth and stability in numismatics.
-
-
-
-here comess our 3rd coin:
-We are talking about <H1> ROMAN AREUS (Rome, late republiccc)</H1>
-1. it was a high purity gold coin used for large payments and elite transcations.
-2. often portrays emperios with titles for their legitimaxy and victories.
-3. minted in small quantites than silved bronzes, making it prized today.
-4. replacemtn by the solidy under constine signaled a monetary shift.
-5. it was one a king and a benchmark of imperia wealth and stablity in numismaticss
+<h1> ROMAN AREUS (Rome, late republic)</h1> <br> 
+- it was a high purity gold coin used for large payments and elite transcations. <br> 
+-often portrays empepors with titles for their legitimacy and victories. <br> 
+-minted in small quantites than silver bronzes, making it prized today. <br> 
+-replacement by the solidus under constanine signaled a monetary shift. <br> 
+-it was one of a king and a benchmark of imperia wealth and stability in numismatics. <br> 
 
 
-a high purity gold coin used for large payments and elite transcations.
-often portrated emperios with titles afor their victories and legiticamncy.
-it was minted in small quantities than silver bronze, make it really prized today.
-replacment by the solidy under constaine signagled a monetary shift.
-it was one a kind and it benchmarks of imperioa weath and stbaility in numismaticss.\
 
 
-it w
+
 </body>
 </html>
