--- a/img4.html
+++ b/img4.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <script>
-  (function () {
-    const COIN_ID = "coin4"; // change to coin2 on img2.html, etc.
-    const KEY_READ = "numescape_read";
-    const KEY_COINS = "numescape_coins";
+   (function () {
+    const COIN_ID = "coin4";
+    const KEY_READ= "numescape_read";
+    const KEY_COINS= "numescape_coins";
 
     const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
     if (!read[COIN_ID]) {
@@ -18,22 +18,21 @@
       localStorage.setItem(KEY_READ, JSON.stringify(read));
       const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
       localStorage.setItem(KEY_COINS, String(coins));
-    }
-  })();
+    } 
+
+  }) ();
 </script>
 
-noww we are talking about the fourth coin which is:
+noww we are talking about the fourth coin which is: <br> 
 
-<H1>PERSIAN DARIC (archaemenid empire, 6th-4th bce)</H1>
--it was a standard gold coin feauturing the royal archer motif.
--it was paired with the silver siglos in a bi-metallix system for imperial finance.
--it facitilited payments across a vast multicultural empire.
--noted for consistent weight and high purity, which ensured trust.
--it influenced high neightboring economics and later coina4es.
+<H1>PERSIAN DARIC (archaemenid empire, 6th-4th bce)</H1> <br> 
+-it was a standard gold coin feauturing the royal archer motif.<br>
+-it was paired with the silver siglos in a bi-metallix system for imperial finance. <br> 
+-it facitilited payments across a vast multicultural empire. <br> 
+-noted for consistent weight and high purity, which ensured trust. <br> 
+-it influenced high neightboring economics and later coina4es. <br>
 
 
-Now lets talk about our 4th coin:
-<B> Per</B>
 
 </h1>
 </body>
