--- a/img5.html
+++ b/img5.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <script>
-  (function () {
-    const COIN_ID = "coin5"; // change to coin2 on img2.html, etc.
-    const KEY_READ = "numescape_read";
-    const KEY_COINS = "numescape_coins";
+   (function () {
+    const COIN_ID = "coin5";
+    const KEY_READ= "numescape_read";
+    const KEY_COINS= "numescape_coins";
 
     const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
     if (!read[COIN_ID]) {
@@ -18,18 +18,19 @@
       localStorage.setItem(KEY_READ, JSON.stringify(read));
       const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
       localStorage.setItem(KEY_COINS, String(coins));
-    }
-  })();
+    } 
+
+  }) ();
 </script>
 
 
-now lets talk about our fifth coin which is:
+now lets talk about our fifth coin which is: <br>
 
-<H1>LYDIAN ELECTRUM STATER</H1>
--it was one the world's first coins, struck in native electrum(alloy of gold-silver).
--it typically showed a lion or lion-bull design associated with royal authority.
--it pioneered denominations like trite and hekte for practicality.
--however variablility in elctrum composition complicated percise valuation
--it set the pattern for stamped, state-guarenteed money.
+<H1>LYDIAN ELECTRUM STATER</H1> <br> 
+-it was one the world's first coins, struck in native electrum(alloy of gold-silver). <br> 
+-it typically showed a lion or lion-bull design associated with royal authority. <br> 
+-it pioneered denominations like trite and hekte for practicality. <br> 
+-however variablility in elctrum composition complicated percise valuation <br> 
+-it set the pattern for stamped, state-guarenteed money. <br>
 </body>
 </html>
