--- a/img7.html
+++ b/img7.html
@@ -9,9 +9,9 @@
     
     <script>
   (function () {
-    const COIN_ID = "coin7"; // change to coin2 on img2.html, etc.
-    const KEY_READ = "numescape_read";
-    const KEY_COINS = "numescape_coins";
+    const COIN_ID = "coin7";
+    const KEY_READ= "numescape_read";
+    const KEY_COINS= "numescape_coins";
 
     const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
     if (!read[COIN_ID]) {
@@ -19,22 +19,22 @@
       localStorage.setItem(KEY_READ, JSON.stringify(read));
       const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
       localStorage.setItem(KEY_COINS, String(coins));
-    }
-  })();
+    } 
+
+  }) ();
 </script>
 
 
 now here comess the 7th coinn, we are talking about:
 
-<h1> SYRACUSE DECADRACHM (SICILY, 5TH-TH BCE)
--massive silver piece famef for astitics excellence by masters like kimon and euainetos.
--obverse often showes arethusa with dolphis, reverse a quadriga with nika.
--likely commemorative or prize realted
--not used for daily transcations.
--exemplifies peak classical die engraving and civic pride.
--rarity and artistry make it a tropy coin for museums and collectos now.
+<h1> SYRACUSE DECADRACHM (SICILY, 5TH-TH BCE): </h1> <br>
+-massive silver piece famef for astitics excellence by masters like kimon and euainetos.<br>
+-obverse often showes arethusa with dolphis, reverse a quadriga with nika.<br>
+-likely commemorative or prize realted<br>
+-not used for daily transcations.<br>
+-exemplifies peak classical die engraving and civic pride. <br>
+-rarity and artistry make it a tropy coin for museums and collectos now.<br>
 
-mduhfrgrfvvvvvvv
 </h1>
 </body>
 </html>
