--- a/img8.html
+++ b/img8.html
@@ -8,10 +8,10 @@
 <body>
 
     <script>
-  (function () {
-    const COIN_ID = "coin8v"; // change to coin2 on img2.html, etc.
-    const KEY_READ = "numescape_read";
-    const KEY_COINS = "numescape_coins";
+   (function () {
+    const COIN_ID = "coin8";
+    const KEY_READ= "numescape_read";
+    const KEY_COINS= "numescape_coins";
 
     const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
     if (!read[COIN_ID]) {
@@ -19,17 +19,18 @@
       localStorage.setItem(KEY_READ, JSON.stringify(read));
       const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
       localStorage.setItem(KEY_COINS, String(coins));
-    }
-  })();
+    } 
+
+  }) ();
 </script>
 
-now we talked about my 8th coinss, im so exicted, lets goo!!!!!
-<h1> 8, AKRAGAS DECADRACHM (also in silcly, early 5th, c. BCE)</h1>
--exceptionally rare large silver coin with elaborate eagle and chariot imagery.
--may celebrate athletic victories or civic acheievements.
--symbolism weaves ky sea and divine favor into civic identity.
--technically challeneging to strike due to size and relief.
--a huge pinnacle for sicillian numismatic artisty and prestige.
+now we talked about my 8th coinss, im so exicted, lets goo!!!!! <br> 
+<h1> 8, AKRAGAS DECADRACHM (also in silcly, early 5th, c. BCE)</h1> <br> 
+-exceptionally rare large silver coin with elaborate eagle and chariot imagery. <br> 
+-may celebrate athletic victories or civic acheievements.<br>
+-symbolism weaves ky sea and divine favor into civic identity. <br>
+-technically challeneging to strike due to size and relief. <br>
+-a huge pinnacle for sicillian numismatic artisty and prestige. <br>
 
 </body>
 </html>
