--- a/img9.html
+++ b/img9.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <script>
-  (function () {
-    const COIN_ID = "coin9"; // change to coin2 on img2.html, etc.
-    const KEY_READ = "numescape_read";
-    const KEY_COINS = "numescape_coins";
+   (function () {
+    const COIN_ID = "coin9";
+    const KEY_READ= "numescape_read";
+    const KEY_COINS= "numescape_coins";
 
     const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
     if (!read[COIN_ID]) {
@@ -18,16 +18,17 @@
       localStorage.setItem(KEY_READ, JSON.stringify(read));
       const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
       localStorage.setItem(KEY_COINS, String(coins));
-    }
-  })();
+    } 
+
+  }) ();
 </script>
-now wealk about our 9th coin at lasy which is:
-<b><h1> BRUTUS 'EID MAR' denarius (rome, 42 bce)</h1></b>
--commenorates the assassination of juilus caesar with daggers and the liberty cap.
--obverse bears brutus' prottait, a bol political statement.
--struck by the conspirators during civil war campaignss.
--many were later melted, surviving exas,ples are exceedingly rare.
--a dramatix fusion on hisriy, progagpaneg and coinage.
+now wealk about our 9th coin at lasy which is: <br> 
+<b><h1> BRUTUS 'EID MAR' denarius (rome, 42 bce)</h1></b> <br> 
+-commenorates the assassination of juilus caesar with daggers and the liberty cap. <br> 
+-obverse bears brutus' prottait, a bol political statement. <br> 
+-struck by the conspirators during civil war campaignss. <br> 
+-many were later melted, surviving exas,ples are exceedingly rare. <br> 
+-a dramatix fusion on hisriy, progagpaneg and coinage. <br> 
 
 </body>
 </html>
