everything readdyy i supposee

--- a/img10.html
+++ b/img10.html
@@ -3,35 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>coin 10</title>
+
+     <style>
+      h2{
+        font-size: 25px;
+        color: black;
+        Font-family: Cursive;
+
+      }
+    </style>
 </head>
-<body>
-    <script>
-   (function () {
-    const COIN_ID = "coin10";
-    const KEY_READ= "numescape_read";
-    const KEY_COINS= "numescape_coins";
+<body background="grunge-vintage-old-paper-background.jpg">
+    
 
-    const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
-    if (!read[COIN_ID]) {
-      read[COIN_ID] = true;
-      localStorage.setItem(KEY_READ, JSON.stringify(read));
-      const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
-      localStorage.setItem(KEY_COINS, String(coins));
-    } 
-
-  }) ();
-</script>
 
 
 And last byt not the least, we talk about our 10th coinnnn. which is: <br> 
-<H1> PUNCH MARKED KARSHAPANA (Ancient india, 6th-2nd BCE)</H1> <br> 
+<H1> Punch-Marked Karshapana</H1> <br> 
+<h2>
 -early indian silver coins stamped with multuple symbols rather portriats. <br> 
 -issued by mahajanapadas and later empries with regional symnbol sets. <br> 
 -standarsdezed wieghts enabled trade acorss the subcontinent. <br> 
 -designs include sun, animals, geomatric marks stamped by authorities. <br>
 -a foundational state in south asian monetary evolution. <br> 
-
+</h2>
+<a href="page2.html"> Return to home page </a>
 
 </body>
 </html>
