--- a/img1.html
+++ b/img1.html
@@ -3,36 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coin 1</title>
+
+    <style>
+      h2{
+        font-size: 25px;
+        color: black;
+        Font-family: Cursive;
+
+      }
+    </style>
 </head>
-<body>
-    <script>
-  (function () {
-    const COIN_ID = "coin1";
-    const KEY_READ= "numescape_read";
-    const KEY_COINS= "numescape_coins";
+<body background="grunge-vintage-old-paper-background.jpg">
+  
+  
 
-    const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
-    if (!read[COIN_ID]) {
-      read[COIN_ID] = true;
-      localStorage.setItem(KEY_READ, JSON.stringify(read));
-      const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
-      localStorage.setItem(KEY_COINS, String(coins));
-    } 
 
-  }) ();
-</script>
 Okay the first coin we are talking about is:
 *DRUMROLLS OFC!* <br> <br> 
 
-<B><h1> 1. athenian tetradrachm (Athens, 4th-5th BCE)</h1></b> <br> 
+<B><h1> 1. Athenian Tetradrachm </h1></b> <br> 
+  <H2>
 - Iconic "owl" silver coin bearing Athena's head on the obverse and her owl with olive sprig on the reverse. <br>
 -Minter from Laurion silver mines, it fueled Athenian trade and the city's Golden age. <br> 
 -Its crisp style and bold eyes make it a numismatic masterpieve. <br> 
 -It was known for its high weight standard and consistent silver cotent. <br>
--Served as a trusted International currency in ancient world.<br>
+-Served as a trusted International currency in ancient world.<br></H2>
 
-
+<a href="page2.html"> Return to home page </a>
 
 
 
