--- a/img2.html
+++ b/img2.html
@@ -3,37 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coin 2</title>
+
+    <style>
+      h2{
+        font-size: 25px;
+        color: black;
+        Font-family: Cursive;
+
+      }
+    </style>
+
 </head>
-<body>
-<script>
-  (function () {
-    const COIN_ID = "coin2";
-    const KEY_READ= "numescape_read";
-    const KEY_COINS= "numescape_coins";
+<body background="grunge-vintage-old-paper-background.jpg" >
 
-    const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
-    if (!read[COIN_ID]) {
-      read[COIN_ID] = true;
-      localStorage.setItem(KEY_READ, JSON.stringify(read));
-      const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
-      localStorage.setItem(KEY_COINS, String(coins));
-    } 
 
-  }) ();
 
-</script>
 
 The second coin we are talking about is: 
 (dumrollss!!) <br> 
 
-<H1> ROMAN DENARIUS (Rome, 3rd BC- 3RD CE) </H1> <br> 
+<H1> Roman Denarius </H1> <br> 
+<h2>
 - The backbone silver coin of the roman republic and early empire. <br> 
 -the most early versions of the coin show the images of deities but 
 on the later version, it features emperors and propaganda scenes. <br> 
 -Widespread circulation and use enabled soldier pay, taxation, and imperial logistics. <br> 
 -Over time, silver content was debased, relecting economic strains on empires. <br>
 - its legacy however continue to survive in later monetray terms and symbols. <br>
+</h2>
+
+<a href="page2.html"> Return to home page </a>
 
 
 
