--- a/img3.html
+++ b/img3.html
@@ -3,37 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coin 3</title>
+
+    <style>
+      h2{
+        font-size: 25px;
+        color: black;
+        Font-family: Cursive;
+
+      }
+    </style>
 </head>
-<body>
-    <script>
-   (function () {
-    const COIN_ID = "coin3";
-    const KEY_READ= "numescape_read";
-    const KEY_COINS= "numescape_coins";
-
-    const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
-    if (!read[COIN_ID]) {
-      read[COIN_ID] = true;
-      localStorage.setItem(KEY_READ, JSON.stringify(read));
-      const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
-      localStorage.setItem(KEY_COINS, String(coins));
-    } 
-
-  }) ();
-</script>
+<body background="grunge-vintage-old-paper-background.jpg">
+    
 
 the next coin we are talking about it: <br> 
 
-<h1> ROMAN AREUS (Rome, late republic)</h1> <br> 
+<h1> Roman Denarius </h1> <br> 
+<h2>
 - it was a high purity gold coin used for large payments and elite transcations. <br> 
 -often portrays empepors with titles for their legitimacy and victories. <br> 
 -minted in small quantites than silver bronzes, making it prized today. <br> 
 -replacement by the solidus under constanine signaled a monetary shift. <br> 
 -it was one of a king and a benchmark of imperia wealth and stability in numismatics. <br> 
+</h2>
 
-
-
+<a href="page2.html"> Return to home page </a>
 
 
 </body>
