--- a/img4.html
+++ b/img4.html
@@ -3,36 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coin 4</title>
+    <style>
+      h2{
+        font-size: 25px;
+        color: black;
+        Font-family: Cursive;
+
+      }
+    </style>
 </head>
-<body>
-    <script>
-   (function () {
-    const COIN_ID = "coin4";
-    const KEY_READ= "numescape_read";
-    const KEY_COINS= "numescape_coins";
+<body background="grunge-vintage-old-paper-background.jpg">
+    
 
-    const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
-    if (!read[COIN_ID]) {
-      read[COIN_ID] = true;
-      localStorage.setItem(KEY_READ, JSON.stringify(read));
-      const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
-      localStorage.setItem(KEY_COINS, String(coins));
-    } 
-
-  }) ();
-</script>
 
 noww we are talking about the fourth coin which is: <br> 
 
-<H1>PERSIAN DARIC (archaemenid empire, 6th-4th bce)</H1> <br> 
+<H1>Persian Daric </H1> <br> 
+<h2>
 -it was a standard gold coin feauturing the royal archer motif.<br>
 -it was paired with the silver siglos in a bi-metallix system for imperial finance. <br> 
 -it facitilited payments across a vast multicultural empire. <br> 
 -noted for consistent weight and high purity, which ensured trust. <br> 
 -it influenced high neightboring economics and later coina4es. <br>
+</h2>
 
-
+<a href="page2.html"> Return to home page </a>
 
 </h1>
 </body>
