--- a/img6.html
+++ b/img6.html
@@ -3,35 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coin 6</title>
+
+     <style>
+      h2{
+        font-size: 25px;
+        color: black;
+        Font-family: Cursive;
+
+      }
+    </style> 
+
 </head>
-<body>
-    <script>
-   (function () {
-    const COIN_ID = "coin6";
-    const KEY_READ= "numescape_read";
-    const KEY_COINS= "numescape_coins";
+<body background="grunge-vintage-old-paper-background.jpg">
+   
 
-    const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
-    if (!read[COIN_ID]) {
-      read[COIN_ID] = true;
-      localStorage.setItem(KEY_READ, JSON.stringify(read));
-      const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
-      localStorage.setItem(KEY_COINS, String(coins));
-    } 
-
-  }) ();
-</script>
 
 lets talk about our sixthh coin nowww. <br> 
 
-<h1> GOLDE STATER OF CROESUS</h1> <br> 
+<h1> Gold Stater of Croesus </h1> <br> 
+<h2>
 -First widely used and recognized pure gold standard coin, paired with pure silver issues. <br> 
 -lion and the bull confronting design symbolizes power and prosperity. <br> 
 -solved electrum valuation problem with fized metal fineness. <br> 
 -influenced greek and near easter monetary systems. <br> 
 -a milestone that stablized larger scale commerce. <br>
+</h2>
 
-<h1> </h1>
+<a href="page2.html"> Return to home page </a>
 </body>
 </html>
