--- a/img7.html
+++ b/img7.html
@@ -3,38 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coin 7</title>
+     <style>
+      h2{
+        font-size: 25px;
+        color: black;
+        Font-family: Cursive;
+
+      }
+    </style>
 </head>
-<body>
+<body background="grunge-vintage-old-paper-background.jpg">
     
-    <script>
-  (function () {
-    const COIN_ID = "coin7";
-    const KEY_READ= "numescape_read";
-    const KEY_COINS= "numescape_coins";
-
-    const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
-    if (!read[COIN_ID]) {
-      read[COIN_ID] = true;
-      localStorage.setItem(KEY_READ, JSON.stringify(read));
-      const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
-      localStorage.setItem(KEY_COINS, String(coins));
-    } 
-
-  }) ();
-</script>
+   
 
 
 now here comess the 7th coinn, we are talking about:
 
-<h1> SYRACUSE DECADRACHM (SICILY, 5TH-TH BCE): </h1> <br>
+<h1> Syracuse Decadrachm </h1> <br>
+<h2>
 -massive silver piece famef for astitics excellence by masters like kimon and euainetos.<br>
 -obverse often showes arethusa with dolphis, reverse a quadriga with nika.<br>
 -likely commemorative or prize realted<br>
 -not used for daily transcations.<br>
 -exemplifies peak classical die engraving and civic pride. <br>
 -rarity and artistry make it a tropy coin for museums and collectos now.<br>
+</h2>
 
 </h1>
+
+<a href="page2.html"> Return to home page </a>
 </body>
 </html>
