--- a/img8.html
+++ b/img8.html
@@ -3,34 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coin 8</title>
+     <style>
+      h2{
+        font-size: 25px;
+        color: black;
+        Font-family: Cursive;
+
+      }
+    </style>
 </head>
-<body>
+<body background="grunge-vintage-old-paper-background.jpg">
 
-    <script>
-   (function () {
-    const COIN_ID = "coin8";
-    const KEY_READ= "numescape_read";
-    const KEY_COINS= "numescape_coins";
-
-    const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
-    if (!read[COIN_ID]) {
-      read[COIN_ID] = true;
-      localStorage.setItem(KEY_READ, JSON.stringify(read));
-      const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
-      localStorage.setItem(KEY_COINS, String(coins));
-    } 
-
-  }) ();
-</script>
 
 now we talked about my 8th coinss, im so exicted, lets goo!!!!! <br> 
-<h1> 8, AKRAGAS DECADRACHM (also in silcly, early 5th, c. BCE)</h1> <br> 
+<h1> Akragas Decadrachm</h1> <br> 
+<h2>
 -exceptionally rare large silver coin with elaborate eagle and chariot imagery. <br> 
 -may celebrate athletic victories or civic acheievements.<br>
 -symbolism weaves ky sea and divine favor into civic identity. <br>
 -technically challeneging to strike due to size and relief. <br>
 -a huge pinnacle for sicillian numismatic artisty and prestige. <br>
+</h2>
+
+<a href="page2.html"> Return to home page </a>
 
 </body>
+
 </html>
