--- a/img9.html
+++ b/img9.html
@@ -3,32 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>coin 9</title>
+
+     <style>
+      h2{
+        font-size: 25px;
+        color: black;
+        Font-family: Cursive;
+
+      }
+    </style>
 </head>
-<body>
-    <script>
-   (function () {
-    const COIN_ID = "coin9";
-    const KEY_READ= "numescape_read";
-    const KEY_COINS= "numescape_coins";
-
-    const read = JSON.parse(localStorage.getItem(KEY_READ) || "{}");
-    if (!read[COIN_ID]) {
-      read[COIN_ID] = true;
-      localStorage.setItem(KEY_READ, JSON.stringify(read));
-      const coins = Number(localStorage.getItem(KEY_COINS) || 0) + 1;
-      localStorage.setItem(KEY_COINS, String(coins));
-    } 
-
-  }) ();
-</script>
+<body background="grunge-vintage-old-paper-background.jpg">
+   
 now wealk about our 9th coin at lasy which is: <br> 
-<b><h1> BRUTUS 'EID MAR' denarius (rome, 42 bce)</h1></b> <br> 
+<b><h1> Brutus “EID MAR” Denarius</h1></b> <br> 
+<h2>
 -commenorates the assassination of juilus caesar with daggers and the liberty cap. <br> 
 -obverse bears brutus' prottait, a bol political statement. <br> 
 -struck by the conspirators during civil war campaignss. <br> 
 -many were later melted, surviving exas,ples are exceedingly rare. <br> 
 -a dramatix fusion on hisriy, progagpaneg and coinage. <br> 
+</h2>
+
+<a href="page2.html"> Return to home page </a>
 
 </body>
 </html>
