--- a/img10.html
+++ b/img10.html
@@ -19,14 +19,16 @@
 
 
 
-And last byt not the least, we talk about our 10th coinnnn. which is: <br> 
-<H1> Punch-Marked Karshapana</H1> <br> 
+ And now we talk about our last coinnn <br> 
+ 
+<H1> 10. Punch-Marked Karshapana</H1> <br> 
 <h2>
--early indian silver coins stamped with multuple symbols rather portriats. <br> 
+-Ancient India, c. 6th–2nd c. BCE <br>
+-early indian silver coins stamped with multuple symbols rather than portriats. <br> 
 -issued by mahajanapadas and later empries with regional symnbol sets. <br> 
 -standarsdezed wieghts enabled trade acorss the subcontinent. <br> 
--designs include sun, animals, geomatric marks stamped by authorities. <br>
--a foundational state in south asian monetary evolution. <br> 
+-designs include many things like sun, animals, geomatric marks stamped by authorities. <br>
+-a foundational step in south asian monetary evolution. <br> 
 </h2>
 <a href="page2.html"> Return to home page </a>
 
