--- a/img2.html
+++ b/img2.html
@@ -20,11 +20,9 @@
 
 
 
-The second coin we are talking about is: 
-(dumrollss!!) <br> 
-
-<H1> Roman Denarius </H1> <br> 
+<H1> 2. Roman Denarius </H1> <br> 
 <h2>
+-From Rome, 3rd c. BCE–3rd c. CE <br>
 - The backbone silver coin of the roman republic and early empire. <br> 
 -the most early versions of the coin show the images of deities but 
 on the later version, it features emperors and propaganda scenes. <br> 
