--- a/img3.html
+++ b/img3.html
@@ -17,13 +17,14 @@
 <body background="grunge-vintage-old-paper-background.jpg">
     
 
-the next coin we are talking about it: <br> 
 
-<h1> Roman Denarius </h1> <br> 
+
+<h1> 3. Roman Aureus </h1> <br> 
 <h2>
-- it was a high purity gold coin used for large payments and elite transcations. <br> 
+-From Rome, late Republic–4th c. CE <br>
+-it was a high purity gold coin used for large payments and elite transcations. <br> 
 -often portrays empepors with titles for their legitimacy and victories. <br> 
--minted in small quantites than silver bronzes, making it prized today. <br> 
+-minted in small quantites than silver bronzes, making it valuable today. <br> 
 -replacement by the solidus under constanine signaled a monetary shift. <br> 
 -it was one of a king and a benchmark of imperia wealth and stability in numismatics. <br> 
 </h2>
