--- a/img4.html
+++ b/img4.html
@@ -17,15 +17,14 @@
     
 
 
-noww we are talking about the fourth coin which is: <br> 
-
-<H1>Persian Daric </H1> <br> 
+<H1>4. Persian Daric </H1> <br> 
 <h2>
+- From Achaemenid Empire, c. 6th–4th c. BCE
 -it was a standard gold coin feauturing the royal archer motif.<br>
 -it was paired with the silver siglos in a bi-metallix system for imperial finance. <br> 
 -it facitilited payments across a vast multicultural empire. <br> 
 -noted for consistent weight and high purity, which ensured trust. <br> 
--it influenced high neightboring economics and later coina4es. <br>
+-it influenced high neightboring economics and later coinages. <br>
 </h2>
 
 <a href="page2.html"> Return to home page </a>
