--- a/img6.html
+++ b/img6.html
@@ -16,13 +16,11 @@
 
 </head>
 <body background="grunge-vintage-old-paper-background.jpg">
-   
 
 
-lets talk about our sixthh coin nowww. <br> 
-
-<h1> Gold Stater of Croesus </h1> <br> 
+<h1> 6. Gold Stater of Croesus </h1> <br> 
 <h2>
+-Also from Lydia, c. 560–546 BCE
 -First widely used and recognized pure gold standard coin, paired with pure silver issues. <br> 
 -lion and the bull confronting design symbolizes power and prosperity. <br> 
 -solved electrum valuation problem with fized metal fineness. <br> 
