--- a/img7.html
+++ b/img7.html
@@ -18,10 +18,11 @@
    
 
 
-now here comess the 7th coinn, we are talking about:
 
-<h1> Syracuse Decadrachm </h1> <br>
+
+<h1> 7. Syracuse Decadrachm </h1> <br>
 <h2>
+-Sicily, 5th–4th c. BCE <br>
 -massive silver piece famef for astitics excellence by masters like kimon and euainetos.<br>
 -obverse often showes arethusa with dolphis, reverse a quadriga with nika.<br>
 -likely commemorative or prize realted<br>
