--- a/img8.html
+++ b/img8.html
@@ -16,11 +16,12 @@
 <body background="grunge-vintage-old-paper-background.jpg">
 
 
-now we talked about my 8th coinss, im so exicted, lets goo!!!!! <br> 
-<h1> Akragas Decadrachm</h1> <br> 
+
+<h1> 8. Akragas Decadrachm</h1> <br> 
 <h2>
+-Sicily, early 5th c. BCE <br> 
 -exceptionally rare large silver coin with elaborate eagle and chariot imagery. <br> 
--may celebrate athletic victories or civic acheievements.<br>
+-celebrate athletic victories or civic acheievements.<br>
 -symbolism weaves ky sea and divine favor into civic identity. <br>
 -technically challeneging to strike due to size and relief. <br>
 -a huge pinnacle for sicillian numismatic artisty and prestige. <br>
