--- a/img9.html
+++ b/img9.html
@@ -16,13 +16,14 @@
 </head>
 <body background="grunge-vintage-old-paper-background.jpg">
    
-now wealk about our 9th coin at lasy which is: <br> 
-<b><h1> Brutus “EID MAR” Denarius</h1></b> <br> 
+
+<b><h1> 9. Brutus “EID MAR” Denarius</h1></b> <br> 
 <h2>
+-From Rome, 42 BCE <br>
 -commenorates the assassination of juilus caesar with daggers and the liberty cap. <br> 
 -obverse bears brutus' prottait, a bol political statement. <br> 
 -struck by the conspirators during civil war campaignss. <br> 
--many were later melted, surviving exas,ples are exceedingly rare. <br> 
+-many were later melted, surviving examples are very rare. <br> 
 -a dramatix fusion on hisriy, progagpaneg and coinage. <br> 
 </h2>
 
