--- a/page2.html
+++ b/page2.html
@@ -56,45 +56,45 @@
 
         <div class="row">
             <div class="column coin-tile">
-                <a href="img1.html">1. <img src="image1.png" alt="Coin 1" class="coin"/> </a>
+                <a href="img1.html">1. <img src="imag1.jpeg" alt="Coin 1" class="coin"/> </a>
             </div>
 
             <div class="column coin-tile">
-                <a href="img2.html"> 2.<img src="image2.png" alt="Coin 2" class="coin"/> </a>
+                <a href="img2.html"> 2.<img src="imag2.jpeg" alt="Coin 2" class="coin"/> </a>
             </div>
 
             <div class="column coin-tile">
-                <a href="img3.html"> 3. <img src="image3.png" alt="Coin 3" class="coin"/> </a>
+                <a href="img3.html"> 3. <img src="imag3.jpeg" alt="Coin 3" class="coin"/> </a>
             </div>
             
             <div class="column coin-tile">
-               <a href="img4.html">4. <img src="image4.png" alt="Coin4" class="coin"/> </a>
+               <a href="img4.html">4. <img src="imag4.jpg" alt="Coin4" class="coin"/> </a>
             </div>
             
             <div class="column coin-tile">
-                <a href="img5.html"> 5. <img src="image5.png" alt="Coin 5" class="coin"/> </a>
+                <a href="img5.html"> 5. <img src="imag5.jpeg" alt="Coin 5" class="coin"/> </a>
             </div>
 
             <div class="break"></div>
 
             <div class="column coin-tile">
-               <a href="img6.html"> 6. <img src="image6.png" alt="Coin 6" class="coin"/> </a>
+               <a href="img6.html"> 6. <img src="imag6.jpeg" alt="Coin 6" class="coin"/> </a>
             </div>
 
             <div class="column coin-tile">
-               <a href="img7.html"> 7. <img src="image7.png" alt="Coin 7" class="coin"/> </a>
+               <a href="img7.html"> 7. <img src="imag7.jpeg" alt="Coin 7" class="coin"/> </a>
             </div>
 
             <div class="column coin-tile">
-               <a href="img8.html"> 8. <img src="image8.png" alt="Coin 8" class="coin"/> </a>
+               <a href="img8.html"> 8. <img src="imag8.jpeg" alt="Coin 8" class="coin"/> </a>
             </div>
  
             <div class="column coin-tile">
-                <a href="img9.html"> 9. <img src="image9.png" alt="Coin 9" class="coin"/> </a>
+                <a href="img9.html"> 9. <img src="imag9.jpeg" alt="Coin 9" class="coin"/> </a>
             </div>
 
             <div class="column coin-tile">
-                <a href="img10.html"> 10. <img src="image10.png" alt="COin 10" class="coin"/> </a>
+                <a href="img10.html"> 10. <img src="imag10.jpeg" alt="COin 10" class="coin"/> </a>
             </div>
 
 
