--- a/img5.html
+++ b/img5.html
@@ -18,10 +18,11 @@
    
 
 
-now lets talk about our fifth coin which is: <br>
 
-<H1>Lydian Electrum Stater </H1> <br> 
+
+<H1>5. Lydian Electrum Stater </H1> <br> 
 <h2>
+-From Lydia, c. 7th–6th c. BCE
 -it was one the world's first coins, struck in native electrum(alloy of gold-silver). <br> 
 -it typically showed a lion or lion-bull design associated with royal authority. <br> 
 -it pioneered denominations like trite and hekte for practicality. <br> 
