--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+<html> <head> <meta charset="utf-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
+    <title>Numiscape</title> </head>
+     <body> <h1>Numiscape</h1> <p>Site is live!</p> <p><a href="./README.md">Read the README</a></p> 
+    </body> 
+    </html>
